--- a/.github/workflows/gh-deploy.yml
+++ b/.github/workflows/gh-deploy.yml
@@ -3,7 +3,7 @@ name: gh-deploy
 on:
   push:
     branches:
-      - gh-deploy  # Cambia esto si tu rama principal tiene otro nombre
+      - main  # Cambia esto si tu rama principal tiene otro nombre
 
 jobs:
   build:
